"""Sipi public + private headers as a header-only `cc_library`.

The `include/` directory holds Sipi's headers in a flat-ish layout:

  include/<Module>.h               — top-level public API headers
  include/<subsystem>/<Module>.h   — per-subsystem (formats, iiifparser, …)

Consumers reference both forms via sibling `#include "SipiCache.h"` (resolved
through `includes = ["."]` propagation) and prefixed
`#include "formats/SipiIOTiff.h"`.

Per-module packages NOT bundled here (consumers depend on the dedicated
target directly):

  `metadata/`  → `//src/metadata:metadata`
  Logger       → `//src/logging:logging`

Cross-package consumers:
  //src:sipi_lib       — primary consumer
  //src/shttps:shttps      — consumes shttps-relevant headers via this bundle
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "headers",
    hdrs = glob(
        [
            "*.h",
            "*.hpp",
            "formats/*.h",
            "iiifparser/*.h",
        ],
        # Future-proof against new subdirs (e.g. include/handlers/) without
        # tripping the empty-glob lint when a subdir is empty or absent.
        allow_empty = True,
    ),
    # Each per-subsystem header dir is on the include path so SIPI's mix of
    # sibling-relative (`#include "SipiDecodeDims.h"`) and prefixed
    # (`#include "formats/SipiIOTiff.h"`) include forms both resolve.
    includes = [
        ".",
        "formats",
        "iiifparser",
    ],
)

# Individual file labels — used where a target needs one specific header
# rather than the whole bundle (e.g. expand_template's `template` argument
# accepts a single Label, not a `cc_library`).
exports_files([
    "SipiVersion.h.in",
    "SipiConfig.h.in",
    # ICC profile binaries embedded as C arrays at build time by
    # `//src:<profile>_icc_h` genrules. `xxd -i`'s array-name inference
    # uses the file basename, so the genrule passes them with the
    # CMake build's exact filenames (.icc / .icm extensions preserved).
    "ICC-Profiles/AdobeRGB1998.icc",
    "ICC-Profiles/Rec709-Rec1886.icc",
    "ICC-Profiles/USWebCoatedSWOP.icc",
    "ICC-Profiles/YCC709.icm",
])
