"""Sipi public + private headers as a header-only `cc_library`.

The `include/` directory holds the server-side / config headers that are NOT
owned by a dedicated module: the Lua config surface (`SipiConf.h`,
`SipiLua.h`), the offline report (`SipiReport.h`), the embedded favicon, the
generated-config templates, and the ICC profile binaries.

Per-module packages NOT bundled here (consumers depend on the dedicated
target directly):

  `//src:engine`         — image engine + iiifparser + cache headers, now
                           co-located with their sources (ADR-0003)
  `//src/metadata`       — EXIF/IPTC/XMP/ICC wrappers
  `//src/logging`        — Logger

Cross-package consumers:
  //src:sipi_lib       — primary consumer
  //src/shttps:shttps      — consumes shttps-relevant headers via this bundle
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "headers",
    hdrs = glob(
        [
            "*.h",
            "*.hpp",
        ],
        # Future-proof against new subdirs without tripping the empty-glob
        # lint when a subdir is empty or absent.
        allow_empty = True,
    ),
    includes = ["."],
)

# Individual file labels — used where a target needs one specific header
# rather than the whole bundle (e.g. expand_template's `template` argument
# accepts a single Label, not a `cc_library`).
exports_files([
    "SipiVersion.h.in",
    "SipiConfig.h.in",
    # ICC profile binaries embedded as C arrays at build time by
    # `//src:<profile>_icc_h` genrules. `xxd -i`'s array-name inference
    # uses the file basename, so the genrule passes them with the
    # CMake build's exact filenames (.icc / .icm extensions preserved).
    "ICC-Profiles/AdobeRGB1998.icc",
    "ICC-Profiles/Rec709-Rec1886.icc",
    "ICC-Profiles/USWebCoatedSWOP.icc",
    "ICC-Profiles/YCC709.icm",
])
