"""Sipi runtime Lua scripts — exposed to Bazel-driven build + test paths.

`exports_files()` surfaces the tiny subset that the production OCI image
copies into `/sipi/scripts/`. `:all_scripts` aggregates the entire
directory for the Rust e2e tests' fixture tree.
"""

package(default_visibility = ["//visibility:public"])

exports_files([
    "send_response.lua",
])

# Full `scripts/` tree. Consumed by `//:test_fixtures` to populate
# `SIPI_REPO_ROOT/scripts/` for the Rust e2e tests; `docker_smoke` also
# bind-mounts it into the container at `/sipi/scripts`. Catches every
# Lua script the test config files `dofile`/`require` from this dir.
filegroup(
    name = "all_scripts",
    srcs = glob(
        ["**/*"],
        allow_empty = False,
    ),
)
