"""shttps — embedded HTTP framework, native first-party `cc_library`.

The fake `ExternalProject_Add` in `ext/shttp/CMakeLists.txt:11` (which `cp -r`s
this directory) is bypassed entirely by the Bazel graph. `ext/shttp/` itself
is left in place — Y deletes nothing — but Bazel never visits it.

Bounded-context boundary (`CONTEXT-MAP.md`): SIPI → shttps is one-way at the
target level. `visibility` enforces this — only `//src/...` may depend on
`//shttps:shttps`, and `//shttps:shttps` declares no `//src/...` deps.

`layering_check` (originally specified in the plan as a verification gate
confirming the DEV-6339 rehome stuck) is **not** enabled yet because
`shttps/*.cpp` still includes `Logger.h` from `//include`, which is the
last residual SIPI → shttps reverse-direction reference. Enabling
layering_check is a TODO immediately after the Logger.h rehome lands —
either move it under `shttps/`, or split it out of the SIPI namespace as
a third-party-style support lib.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:magic_database.bzl", "magic_mgc_header")

package(default_visibility = [
    "//src:__subpackages__",
    "//shttps:__subpackages__",
])

# Embeds libmagic's `share/misc/magic.mgc` database as a C array consumed
# by `shttps/Parsing.cpp` (`magic_load_buffers(magic_mgc, magic_mgc_len, …)`).
# Mirrors the CMake build's `magic_database` chain (CMakeLists.txt). The
# custom rule lives in `//bazel:magic_database.bzl` because foreign_cc's
# `$(execpath)` form only resolves to the primary CcInfo output (libmagic.a),
# not data files under the rule's install tree.
magic_mgc_header(
    name = "magic_mgc_h",
    libmagic = "//ext/libmagic:libmagic",
    out = "generated/magic_mgc.h",
)

cc_library(
    name = "shttps",
    srcs = glob(
        [
            "*.cpp",
            "*.c",
        ],
        exclude = [
            "Shttp.cpp",  # standalone test driver, not part of the library
        ],
    ),
    hdrs = glob([
        "*.h",
        "*.hpp",
    ]) + [":magic_mgc_h"],
    # `include_prefix = "shttps"` registers each header under the
    # `shttps/` prefix in Bazel's virtual-include namespace, so consumers
    # in src/ can write `#include "shttps/X.h"`. `includes = ["."]` adds
    # both the source dir (`shttps/`) and the generated-output dir
    # (`bazel-bin/shttps/`) to the compiler's include search path so:
    #   * sibling-relative includes inside shttps/ (`#include "Connection.h"`)
    #     keep working
    #   * `#include "generated/magic_mgc.h"` (the genrule output above)
    #     resolves via `bazel-bin/shttps/generated/magic_mgc.h`
    # Bazel rejects `includes = [".."]` (workspace-root exposure) so
    # include_prefix is the right idiom for the prefix form.
    includes = ["."],
    include_prefix = "shttps",
    deps = [
        # TODO(DEV-6342): the cross-context include of `//include:Logger.h`
        # is the last residual SIPI → shttps reverse-direction reference.
        # Once Logger.h is rehomed under shttps/ (or a shared support lib),
        # this dep drops and `features = ["layering_check"]` flips on as
        # the verification gate the plan calls for.
        "//include:headers",
        "//ext/curl:curl",
        "//ext/jansson:jansson",
        "//ext/libmagic:libmagic",
        "//ext/lua:lua",
        "//ext/openssl:openssl",
        "//ext/sqlite3:sqlite3",
        "//ext/zlib:zlib",
    ],
)
