"""shttps — embedded HTTP framework, native first-party `cc_library`.

The fake `ExternalProject_Add` in `ext/shttp/CMakeLists.txt:11` (which `cp -r`s
this directory) is bypassed entirely by the Bazel graph. `ext/shttp/` itself
is left in place — Y deletes nothing — but Bazel never visits it.

Bounded-context boundary (`CONTEXT-MAP.md`): SIPI → shttps is one-way at the
target level. `visibility` enforces this — only `//src/...` may depend on
`//shttps:shttps`, and `//shttps:shttps` declares no `//src/...` deps.

`layering_check` (originally specified in the plan as a verification gate
confirming the DEV-6339 rehome stuck) is **not** enabled yet because
`shttps/*.cpp` still includes `Logger.h` from `//include`, which is the
last residual SIPI → shttps reverse-direction reference. Enabling
layering_check is a TODO immediately after the Logger.h rehome lands —
either move it under `shttps/`, or split it out of the SIPI namespace as
a third-party-style support lib.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:magic_database.bzl", "magic_mgc_header")

package(default_visibility = [
    "//src:__subpackages__",
    "//shttps:__subpackages__",
])

# Embeds libmagic's `share/misc/magic.mgc` database as a C array consumed
# by `shttps/Parsing.cpp` (`magic_load_buffers(magic_mgc, magic_mgc_len, …)`).
# Mirrors the CMake build's `magic_database` chain (CMakeLists.txt). The
# custom rule lives in `//bazel:magic_database.bzl` because foreign_cc's
# `$(execpath)` form only resolves to the primary CcInfo output (libmagic.a),
# not data files under the rule's install tree.
magic_mgc_header(
    name = "magic_mgc_h",
    libmagic = "//ext/libmagic:libmagic",
    out = "generated/magic_mgc.h",
)

# ── //shttps:shttps_headers ────────────────────────────────────────────────
# Header-only surface of shttps. Split out so `//fuzz/handlers:fuzz_subset`
# can compile its 5-cpp slice with the full shttps include graph available
# (sibling-relative `#include "Server.h"` chains pull Logger.h, LuaServer.h,
# Global.h, etc.) without linking shttps's compiled archive — only the four
# explicitly-listed cpps end up in the fuzz binary.
#
# `includes = ["."]` + `include_prefix = "shttps"` produce the same virtual-
# include layout the original `shttps` cc_library exposed: consumers reach
# the headers as `#include "shttps/X.h"` (prefix form) AND sibling-relative
# `#include "X.h"` keeps working from inside shttps/*.cpp because Clang
# searches the source file's directory by default for quoted-form includes.
cc_library(
    name = "shttps_headers",
    hdrs = glob([
        "*.h",
        "*.hpp",
    ]) + [":magic_mgc_h"],
    includes = ["."],
    include_prefix = "shttps",
    deps = [
        # TODO(DEV-6342): the cross-context include of `//include:Logger.h`
        # is the last residual SIPI → shttps reverse-direction reference.
        # Once Logger.h is rehomed under shttps/ (or a shared support lib),
        # this dep drops and `features = ["layering_check"]` flips on as
        # the verification gate the plan calls for.
        "//include:headers",
        "//ext/curl:curl",
        "//ext/jansson:jansson",
        "//ext/libmagic:libmagic",
        "//ext/lua:lua",
        "//ext/openssl:openssl",
        "//ext/sqlite3:sqlite3",
        "//ext/zlib:zlib",
    ],
)

cc_library(
    name = "shttps",
    srcs = glob(
        [
            "*.cpp",
            "*.c",
        ],
        exclude = [
            "Shttp.cpp",  # standalone test driver, not part of the library
        ],
    ),
    deps = [":shttps_headers"],
)

# ── //shttps:fuzz_subset — minimal slice for libFuzzer (DEV-6345) ──────────
# Deliberate subset of shttps (4 cpps) plus `iiif_handler.cpp` from //src,
# recompiled under the libFuzzer instrumentation flags from `--config=fuzz`
# (.bazelrc `build:fuzz` block). Mirrors today's
# `lib_iiif_handler_uri_parser_fuzz` static library in
# `fuzz/handlers/CMakeLists.txt:18-30`.
#
# Lives in `shttps/BUILD.bazel` (not `fuzz/handlers/BUILD.bazel`) because
# four of its five sources are native to this package — keeping the
# cc_library here avoids a four-way `exports_files` cross-package reach.
# Same precedent as `bazel/magic_database.bzl`: build-graph machinery lives
# where the inputs live. The single cross-package source — //src's
# `iiif_handler.cpp` — is reached via `exports_files` in `src/BUILD.bazel`,
# with its companion header surfaced via `//src:iiif_handler_hdrs` to make
# the include resolution explicit.
#
# Linking the full `:shttps` archive under fuzz flags would pull Lua VM /
# prometheus / sentry symbols the harness never exercises and inflate the
# libFuzzer corpus search-space cost — `fuzz_subset` keeps the link line
# tight while `:shttps_headers` (header-only) gives the cpps the full
# include graph they need to compile.
cc_library(
    name = "fuzz_subset",
    srcs = [
        "ChunkReader.cpp",
        "Connection.cpp",
        "Error.cpp",
        "SockStream.cpp",
        "//src:handlers/iiif_handler.cpp",
    ],
    target_compatible_with = ["//tools/fuzz:fuzz_enabled"],
    visibility = ["//fuzz/handlers:__pkg__"],
    deps = [
        ":shttps_headers",
        "//ext/openssl:openssl",
        "//src:iiif_handler_hdrs",
    ],
)
