"""Sipi first-party C++ build graph.

Two targets:

  //src:sipi_lib  — `cc_library` containing every Sipi translation unit
                    *except* the executable's `main`. Headers come via
                    `//include:headers` (which exposes private internal
                    headers like `metadata/SipiIccDetail.h` so per-component
                    unit tests in Y+1 can link against private symbols).
  //src:sipi      — thin `cc_binary` (`srcs = ["sipi.cpp"]`) deps-only on
                    `:sipi_lib`. `linkopts = ["-Wl,--build-id=sha1"]`
                    content-addresses the build-id for Y+4 debug-info
                    reproducibility.

The split is mandatory infrastructure for Y+1 (per-component unit tests)
and scaffolds the post-Y+6 layout flip — the eventual Y+8 series breaks
`:sipi_lib` apart into per-module `cc_library` targets without re-touching
this BUILD's public shape.

Versioning: `expand_template` regenerates `SipiVersion.h` from
`include/SipiVersion.h.in` whenever any `STABLE_*` value emitted by
`tools/workspace_status.sh` changes — replaces today's CMake
`configure_file()` flow.
"""

load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

# ── generated/SipiVersion.h ────────────────────────────────────────────────
# Bazel re-evaluates `STABLE_*` keys on every build, but downstream actions
# invalidate only when a value *changes* — editing an unrelated .cpp leaves
# this rule's output stable, so unrelated TUs do not recompile. release-please
# bumping `version.txt` flips `STABLE_SIPI_VERSION`, the header regenerates,
# and the few TUs that include it recompile.
#
# Output path is `generated/SipiVersion.h` because `src/sipi.cpp`,
# `src/SipiHttpServer.cpp`, and `src/SipiMetrics.cpp` consume it as
# `#include "generated/SipiVersion.h"` — the prefix is mandatory and
# matches the existing CMake build's `${CMAKE_BINARY_DIR}/generated/`
# layout.
expand_template(
    name = "sipi_version_h",
    out = "generated/SipiVersion.h",
    template = "//include:SipiVersion.h.in",
    stamp_substitutions = {
        "@SIPI_VERSION_STRING@": "{{STABLE_SIPI_VERSION}}",
        "@BUILD_SCM_TAG@": "{{STABLE_GIT_VERSION}}",
        "@BUILD_SCM_REVISION@": "{{STABLE_GIT_COMMIT}}",
        "@BUILD_TIMESTAMP@": "{{STABLE_IMAGE_CREATED}}",
    },
    # Non-stamp fallback for `bazel build` without `--stamp`. Keys identical
    # to stamp_substitutions so the generated header has the same shape
    # regardless of stamp mode.
    substitutions = {
        "@SIPI_VERSION_STRING@": "0.0.0-unstamped",
        "@BUILD_SCM_TAG@": "unstamped",
        "@BUILD_SCM_REVISION@": "unknown",
        "@BUILD_TIMESTAMP@": "1970-01-01T00:00:00Z",
    },
)

# ── generated/SipiConfig.h ─────────────────────────────────────────────────
# Mirrors CMake's `configure_file(SipiConfig.h.in …)` step. The two cmakedefine
# entries (`HAVE_MALLOC_H`, `HAVE_ST_ATIMESPEC`) are platform probes; we set
# them with conservative platform-specific values rather than running real
# autoconf-style probes since the existing CMake values come from CMake's
# `check_include_files` / `check_struct_has_member` macros.
expand_template(
    name = "sipi_config_h",
    out = "generated/SipiConfig.h",
    template = "//include:SipiConfig.h.in",
    substitutions = select({
        "@platforms//os:linux": {
            "#cmakedefine HAVE_MALLOC_H 1": "#define HAVE_MALLOC_H 1",
            "#cmakedefine HAVE_ST_ATIMESPEC": "/* HAVE_ST_ATIMESPEC: linux uses st_atim */",
        },
        "@platforms//os:macos": {
            "#cmakedefine HAVE_MALLOC_H 1": "/* HAVE_MALLOC_H: macOS uses <malloc/malloc.h>, not <malloc.h> */",
            "#cmakedefine HAVE_ST_ATIMESPEC": "#define HAVE_ST_ATIMESPEC 1",
        },
        "//conditions:default": {
            "#cmakedefine HAVE_MALLOC_H 1": "/* HAVE_MALLOC_H undefined */",
            "#cmakedefine HAVE_ST_ATIMESPEC": "/* HAVE_ST_ATIMESPEC undefined */",
        },
    }),
)

# ── generated/<profile>_icc.h ──────────────────────────────────────────────
# `xxd -i`-style C arrays embedding the binary ICC profiles. Mirrors
# `CMakeLists.txt`'s ICC `add_custom_command` chain. Each genrule copies the
# binary to a working file with the right name (so `xxd -i`'s array-name
# inference matches what `src/metadata/SipiIcc.cpp` references), runs the
# converter, then drops the temp.
[
    genrule(
        name = profile + "_icc_h",
        srcs = [
            "//include:ICC-Profiles/" + src,
            "//:generate_icc_header.sh",
        ],
        outs = ["generated/" + profile + "_icc.h"],
        cmd = """
            set -euo pipefail
            tmpdir=$$(mktemp -d)
            script=$$(realpath $(execpath //:generate_icc_header.sh))
            cp $(execpath //include:ICC-Profiles/{src}) $$tmpdir/{src}
            (cd $$tmpdir && "$$script" {src} {profile}_icc.h {array})
            mv $$tmpdir/{profile}_icc.h $(OUTS)
            rm -rf $$tmpdir
        """.format(
            src = src,
            profile = profile,
            array = array,
        ),
    )
    for (profile, src, array) in [
        ("AdobeRGB1998", "AdobeRGB1998.icc", "AdobeRGB1998_icc"),
        ("USWebCoatedSWOP", "USWebCoatedSWOP.icc", "USWebCoatedSWOP_icc"),
        ("YCC709", "YCC709.icm", "YCC709_icc"),
        # `Rec709-Rec1886` array name uses underscores because C identifiers
        # can't contain `-`; mirrors CMakeLists.txt:
        ("Rec709-Rec1886", "Rec709-Rec1886.icc", "Rec709_Rec1886_icc"),
    ]
]

# ── //src:sipi_lib ─────────────────────────────────────────────────────────
# Every translation unit except the executable's `main`.
cc_library(
    name = "sipi_lib",
    srcs = glob(
        [
            "**/*.cpp",
            "**/*.hpp",
        ],
        exclude = [
            "sipi.cpp",  # executable entry point — lives in :sipi binary
            # The CMake build (CMakeLists.txt:461 add_executable(sipi …))
            # explicitly enumerates the TUs it wants and silently skips
            # these two — both still reference symbols that have moved
            # (`shttps/cJSON.h` was removed when shttps switched to
            # jansson; the Salsah session helper is unwired). Treating
            # them as dead code matches the CMake behaviour. TODO Y+1
            # (DEV-6343): delete the source files outright once unit
            # tests confirm nothing else references them.
            "PhpSession.cpp",
            "Salsah.cpp",
            "Template.cpp",
        ],
    ),
    hdrs = [
        ":generated/SipiVersion.h",
        ":generated/SipiConfig.h",
        ":generated/AdobeRGB1998_icc.h",
        ":generated/Rec709-Rec1886_icc.h",
        ":generated/USWebCoatedSWOP_icc.h",
        ":generated/YCC709_icc.h",
    ],
    includes = ["."],
    copts = ["-fexceptions"],
    deps = [
        "//include:headers",
        "//shttps:shttps",
        "//ext/lcms2:lcms2",
        "//ext/exiv2:exiv2",
        "//ext/expat:expat",
        "//ext/tiff:tiff",
        "//ext/webp:webp",
        "//ext/jbigkit:jbigkit",
        "//ext/png:png",
        "//ext/xz:xz",
        "//ext/libmagic:libmagic",
        "//ext/lua:lua",
        "//ext/jansson:jansson",
        "//ext/sqlite3:sqlite3",
        "//ext/sentry:sentry",
        "//ext/prometheus-cpp:prometheus-cpp",
        "//ext/curl:curl",
        "//ext/openssl:openssl",
        "//ext/jpeg:jpeg",
        "//ext/bzip2:bzip2",
        "//ext/zstd:zstd",
        "//ext/zlib:zlib",
        "@kakadu//:kdu",
    ],
)

# ── //src:sipi ─────────────────────────────────────────────────────────────
cc_binary(
    name = "sipi",
    srcs = ["sipi.cpp"],
    linkopts = select({
        # Content-addressed build-id for reproducible debug-info splitting
        # in Y+4. `--build-id=sha1` derives the build-id from the binary's
        # content hash rather than a wall-clock random; identical inputs
        # ↔ identical build-id.
        "@platforms//os:linux": ["-Wl,--build-id=sha1"],
        # System frameworks/libs required by transitive deps:
        #   * `-liconv` — exiv2's convert.cpp uses iconv() on macOS for
        #     metadata charset conversion. Apple ships libiconv in
        #     /usr/lib/libiconv.dylib but the link must be explicit.
        #   * `-framework SystemConfiguration` — curl's macos.c calls
        #     `SCDynamicStoreCopyProxies` for proxy auto-detection.
        #   * `-framework CoreFoundation` — implicit dep of
        #     SystemConfiguration; safer to spell out.
        # Mirrors what nixpkgs' wrapped clang adds to LDFLAGS for the
        # CMake build of SIPI today.
        "@platforms//os:macos": [
            "-liconv",
            "-framework",
            "SystemConfiguration",
            "-framework",
            "CoreFoundation",
        ],
        "//conditions:default": [],
    }),
    deps = [":sipi_lib"],
)
